hphp/test/slow/func-ptr/bad-func3.php.expectf
Fatal error: Failure to resolve undefined function foo$inout() in %s/test/slow/func-ptr/bad-func3.php on line 5